# jira-coding-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
src/: config.py  observability.py
src/agent/: graph.py  state.py
src/agent/nodes/: approver.py  fixer.py  parser.py  planner.py  screenshotter.py  searcher.py  tester.py  writer.py
src/integrations/: git_ops.py  github_client.py  jira_client.py
src/mcp/: playwright_client.py
src/rag/: chunker.py  indexer.py  retriever.py
src/server/: app.py  models.py
src/tools/: dev_server.py
